# gpt-shop-viz

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
alembic/: README  env.py
alembic/versions/: 0001_initial_schema.py  0002_add_urls_json.py
app/: crud.py  db.py  main.py  models.py  schemas.py
docker/api/: Dockerfile
docker/scraper/: Dockerfile
frontend/: .env.local.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/components/: BestPriceForm.tsx  Layout.tsx  NewProductForm.tsx  ProductCard.tsx  RealtimeToggle.tsx  SnapshotCard.tsx  SnapshotChart.tsx  SnapshotTable.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/products/: [id].tsx
frontend/utils/: api.ts
scraper/: __init__.py  openai_client.py  run_once.py
scripts/: fake_history.py  load_products.py
tests/: conftest.py  test_api.py  test_crud.py  test_openai_client.py
